deployments/k8s/infrastructure/base/kafka/kafka-ui-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kafka-ui
  labels:
    app: kafka-ui
spec:
  podSelector:
    matchLabels:
      app: kafka-ui
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 8080
